--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+*.obj
+*.mtl
+*.OBJ
+*.MTL
 .DS_Store
 applet
 application.linux32
@@ -5,5 +9,4 @@ application.linux64
 application.windows32
 application.windows64
 application.macosx
-*.obj
-*.mtl
+
